fix: improve button text alignment across browsers

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,6 +14,8 @@ main {
 
 /* mc buttons */
 .mc-button {
+  text-box-trim: trim-both;
+  text-box-edge: cap alphabetic;
   cursor: pointer;
   border: 2px solid #000;
   color: #f7f7f7;
