--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -35,7 +35,6 @@ main.home {
   font-family: 'Minecraft Ten', sans-serif;
   height: 48px;
   width: 220px;
-  padding: 0.5rem 1rem 0.25rem;
 }
 
 .mc-button.play {
